# tui-menu

./: .gitignore  CMakeLists.txt  README.md  README.md.backup  conanfile.txt  container.hpp  main.cpp  mainscreen.hpp
docs/: README.md
example/: CMakeLists.txt  README.md
example/.cache/clangd/index/: main.cpp.AFD61D5B0CF212EA.idx
examples/ads-l1-v3/: app.hpp  container.hpp  main.cpp
examples/ads-l2/: CMakeLists.txt  app.hpp  container.hpp  main.cpp
examples/ads-l3/: CMakeLists.txt  app.hpp  bst.hpp  container.hpp  main.cpp  randtree-app.hpp  t234-app.hpp  t234.hpp
examples/ads-l4/: CMakeLists.txt  app.hpp  container.hpp  main.cpp
include/: mainscreen.hpp
include/tui-menu/: combinedcomponent.hpp  graphviewwindow.hpp  inputbox.hpp  inputscreen.hpp  inputwindow.hpp  iscreen.hpp  itemlist.hpp  mainscreen.hpp  mainwindow.hpp  menu.hpp  navscreen.hpp  navwindow.hpp  tui-menu.hpp  tui.hpp  types.hpp  validators.hpp  window.hpp  window_old.hpp  windowbase.hpp
src/tui-menu/: validators.cpp
